force-app/main/default/objects/vlocity_ins__GraphCloneSpecial__c/fields/vlocity_ins__ChildObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ChildObject__c</fullName>
    <description>Child object(s) being cloned.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Child Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>