force-app/main/default/objects/vlocity_ins__GraphCloneSpecial__c/fields/vlocity_ins__RootObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RootObject__c</fullName>
    <description>The parent object type that is being cloned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Root Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>